# memleakutil

./: AUTHORS  CHANGELOG.md  ChangeLog  Makefile.am  Makefile.raw  README  README.md  configure.ac
.github/scripts/: check_changelog.py
.github/workflows/: build.yml  changelog_check.yml
inc/: memfns_wrap.h
lib/: memfns_wrap.c
tst/: memleakutil_test.c
uty/: memleakutil.c
